--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+ul {
+  padding-left: 0;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -47,6 +51,43 @@ body {
 }
 
 /* Стилі шапки */
+.container {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.menu {
+  display: flex;
+  height: 80px;
+}
+
+.navi {
+  display: flex;
+}
+
+.navi > .logo {
+  padding-top: 24px;
+}
+
+.navi-items {
+  display: flex;
+  margin-right: 344px;
+}
+
+.navi-items > .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.navi-contacts {
+  display: flex;
+  padding-right: 214px;
+}
+
+.navi-contacts > .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .logo {
   color: var(--primary-logo-color);
   font-family: 'Raleway', sans-serif;
@@ -54,6 +95,12 @@ body {
   font-size: 26px;
   line-height: calc(31 / 26);
   text-decoration: none;
+}
+
+.navi > .logo {
+  display: block;
+  padding-left: 215px;
+  margin-right: 93px;
 }
 
 .logo-text-header {
@@ -93,10 +140,17 @@ body {
 
 /* Стилі героя */
 .hero {
+  height: 600px;
+  margin-bottom: 94px;
   background-color: var(--footer-bgd-color);
 }
 
 .hero-title {
+  display: block;
+  width: 696px;
+  padding: 200px 452px 0 452px;
+  margin-top: 0;
+  margin-bottom: 30px;
   color: var(--main-bgd-color);
   font-weight: 900;
   font-size: 44px;
@@ -107,6 +161,10 @@ body {
 
 /* Button-primary */
 .btn-primary {
+  display: block;
+  margin: 0 auto;
+  width: 216px;
+  height: 50px;
   font-family: inherit;
   color: var(--main-bgd-color);
   background-color: var(--primary-logo-color);
@@ -130,6 +188,19 @@ body {
 }
 
 /* Стилі особливостей */
+.features {
+  margin-bottom: 94px;
+}
+
+.features-items {
+  display: flex;
+  padding-left: 215px;
+  padding-right: 215px;
+}
+
+.features-items > .item:not(:last-child) {
+  margin-right: 30px;
+}
 
 .features-title {
   font-size: 14px;
@@ -141,9 +212,49 @@ body {
   line-height: calc(24 / 14);
 }
 
+/* Чим ми займаємося */
+.activities {
+  margin-bottom: 94px;
+}
+
+.activities-items {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 215px;
+  padding-right: 215px;
+}
+
+.activities-items > .item:not(:last-child) {
+  margin-right: 30px;
+}
+
 /* Стилі нашої команди */
 .team {
   background-color: var(--btn-secondary-color);
+  height: 648px;
+}
+
+.team > .section-title {
+  padding-top: 94px;
+  margin-bottom: 50px;
+}
+
+.team-items {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 215px;
+  padding-right: 215px;
+  padding-bottom: 94px;
+}
+
+.team-items > .item {
+  background-color: var(--main-bgd-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-items > .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .team-name {
@@ -163,10 +274,23 @@ body {
 /* Стилі підвалу */
 .footer {
   background-color: var(--footer-bgd-color);
+  height: 252px;
+}
+
+.footer > .logo {
+  display: block;
+  padding-top: 60px;
+  padding-left: 215px;
+  margin-bottom: 20px;
 }
 
 .logo-text-footer {
   color: var(--main-bgd-color);
+}
+
+.footer-contacts {
+  padding-left: 215px;
+  padding-bottom: 60px;
 }
 
 .item > .address-link {
