--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,19 @@ body {
   letter-spacing: 0.03em;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
 ul {
   padding-left: 0;
 }
@@ -52,7 +65,7 @@ ul {
 
 /* Стилі шапки */
 .container {
-  width: 1600px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -148,8 +161,7 @@ ul {
 .hero-title {
   display: block;
   width: 696px;
-  padding: 200px 452px 0 452px;
-  margin-top: 0;
+  /* padding: 200px 452px 0 452px; */
   margin-bottom: 30px;
   color: var(--main-bgd-color);
   font-weight: 900;
@@ -277,7 +289,7 @@ ul {
   height: 252px;
 }
 
-.footer > .logo {
+.footer .logo {
   display: block;
   padding-top: 60px;
   padding-left: 215px;
