--- a/css/styles.css
+++ b/css/styles.css
@@ -30,16 +30,10 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  margin: 0;
-}
-
+h6,
 p {
-  margin: 0;
-}
-
-ul {
-  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .visually-hidden {
@@ -56,7 +50,15 @@ ul {
 }
 
 .list {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style: none;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .capitalize {
@@ -68,33 +70,37 @@ ul {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.menu {
+.main-nav > .navi {
   display: flex;
-  height: 80px;
+  align-items: center;
 }
 
-.navi {
+.navi > .navi-items {
   display: flex;
 }
 
-.navi > .logo {
-  padding-top: 24px;
+.main-nav > .navi-contacts {
+  display: flex;
+  margin-left: auto;
 }
 
-.navi-items {
+.item > .navi-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.main-nav {
   display: flex;
-  margin-right: 344px;
+  align-items: center;
 }
 
 .navi-items > .item:not(:last-child) {
   margin-right: 50px;
-}
-
-.navi-contacts {
-  display: flex;
-  padding-right: 214px;
 }
 
 .navi-contacts > .item:not(:last-child) {
@@ -112,7 +118,6 @@ ul {
 
 .navi > .logo {
   display: block;
-  padding-left: 215px;
   margin-right: 93px;
 }
 
@@ -121,6 +126,9 @@ ul {
 }
 
 .item > .header-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
@@ -154,20 +162,19 @@ ul {
 /* Стилі героя */
 .hero {
   height: 600px;
-  margin-bottom: 94px;
   background-color: var(--footer-bgd-color);
+  text-align: center;
 }
 
 .hero-title {
-  display: block;
+  display: inline-block;
   width: 696px;
-  /* padding: 200px 452px 0 452px; */
+  padding-top: 200px;
   margin-bottom: 30px;
   color: var(--main-bgd-color);
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
-  text-align: center;
   letter-spacing: 0.06em;
 }
 
@@ -193,6 +200,7 @@ ul {
 
 /* Стилі заголовків секцій */
 .section-title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
@@ -200,14 +208,8 @@ ul {
 }
 
 /* Стилі особливостей */
-.features {
-  margin-bottom: 94px;
-}
-
 .features-items {
   display: flex;
-  padding-left: 215px;
-  padding-right: 215px;
 }
 
 .features-items > .item:not(:last-child) {
@@ -215,6 +217,7 @@ ul {
 }
 
 .features-title {
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: calc(16 / 14);
 }
@@ -225,19 +228,15 @@ ul {
 }
 
 /* Чим ми займаємося */
-.activities {
-  margin-bottom: 94px;
-}
-
 .activities-items {
   display: flex;
-  flex-wrap: wrap;
-  padding-left: 215px;
-  padding-right: 215px;
 }
 
 .activities-items > .item:not(:last-child) {
   margin-right: 30px;
+}
+.item > .activities-img {
+  display: block;
 }
 
 /* Стилі нашої команди */
@@ -246,20 +245,12 @@ ul {
   height: 648px;
 }
 
-.team > .section-title {
-  padding-top: 94px;
-  margin-bottom: 50px;
-}
-
 .team-items {
   display: flex;
-  flex-wrap: wrap;
-  padding-left: 215px;
-  padding-right: 215px;
-  padding-bottom: 94px;
 }
 
 .team-items > .item {
+  height: 368px;
   background-color: var(--main-bgd-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -270,6 +261,7 @@ ul {
 }
 
 .team-name {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -283,6 +275,11 @@ ul {
   text-align: center;
 }
 
+.team-image {
+  display: block;
+  margin-bottom: 30px;
+}
+
 /* Стилі підвалу */
 .footer {
   background-color: var(--footer-bgd-color);
@@ -292,7 +289,6 @@ ul {
 .footer .logo {
   display: block;
   padding-top: 60px;
-  padding-left: 215px;
   margin-bottom: 20px;
 }
 
@@ -301,7 +297,6 @@ ul {
 }
 
 .footer-contacts {
-  padding-left: 215px;
   padding-bottom: 60px;
 }
 
@@ -333,6 +328,16 @@ ul {
 
 /* ---------Портфоліо---------- */
 /* btn-secondary */
+.filter-items {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter-items > .item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .btn-secondary {
   font-family: inherit;
   color: var(--main-font-color);
@@ -341,6 +346,7 @@ ul {
   font-size: 16px;
   line-height: calc(26 / 16);
   letter-spacing: 0.03em;
+  border-radius: 4px;
   cursor: pointer;
 }
 
@@ -350,18 +356,42 @@ ul {
   background-color: var(--primary-logo-color);
 }
 
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .card {
+  height: 404px;
   outline: solid 1px var(--card-border-color);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.cards > .card:nth-child(3n) {
+  margin-right: 0;
+}
+
+.cards > .card:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.card-img {
+  margin-bottom: 20px;
 }
 
 /* Стилі заголовків портфоліо */
 .portfolio-title {
+  margin-bottom: 4px;
+  padding-left: 24px;
   font-size: 18px;
   line-height: calc(36 / 18);
   letter-spacing: 0.06em;
 }
 
 .portfolio-desc {
+  padding-left: 24px;
+  padding-bottom: 20px;
   color: var(--paragraph-color);
   font-size: 16px;
   line-height: calc(30 / 16);
