--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --btn-active-color: #188ce8;
   --card-border-color: #eeeeee;
   --footer-bgd-color: #2f303a;
+  --border-color: #ececec;
 }
 
 body {
@@ -66,10 +67,13 @@ p {
 }
 
 /* Стилі шапки */
+.menu {
+  border-bottom: 1px solid var(--border-color);
+}
+
 .container {
   width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -129,6 +133,7 @@ p {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
@@ -161,15 +166,16 @@ p {
 
 /* Стилі героя */
 .hero {
-  height: 600px;
+  padding: 200px 0;
+
   background-color: var(--footer-bgd-color);
   text-align: center;
 }
 
 .hero-title {
   display: inline-block;
+
   width: 696px;
-  padding-top: 200px;
   margin-bottom: 30px;
   color: var(--main-bgd-color);
   font-weight: 900;
@@ -182,8 +188,8 @@ p {
 .btn-primary {
   display: block;
   margin: 0 auto;
-  width: 216px;
-  height: 50px;
+  padding: 10px 32px;
+
   font-family: inherit;
   color: var(--main-bgd-color);
   background-color: var(--primary-logo-color);
@@ -191,6 +197,7 @@ p {
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.06em;
+  border-radius: 4px;
   cursor: pointer;
 }
 
@@ -201,6 +208,7 @@ p {
 /* Стилі заголовків секцій */
 .section-title {
   margin-bottom: 50px;
+
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
@@ -218,6 +226,7 @@ p {
 
 .features-title {
   margin-bottom: 10px;
+
   font-size: 14px;
   line-height: calc(16 / 14);
 }
@@ -250,7 +259,6 @@ p {
 }
 
 .team-items > .item {
-  height: 368px;
   background-color: var(--main-bgd-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -262,6 +270,7 @@ p {
 
 .team-name {
   margin-bottom: 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -269,6 +278,8 @@ p {
 }
 
 .team-role {
+  padding-bottom: 30px;
+
   color: var(--paragraph-color);
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -282,22 +293,18 @@ p {
 
 /* Стилі підвалу */
 .footer {
+  padding: 60px 0;
+
   background-color: var(--footer-bgd-color);
-  height: 252px;
 }
 
 .footer .logo {
-  display: block;
-  padding-top: 60px;
+  display: inline-block;
   margin-bottom: 20px;
 }
 
 .logo-text-footer {
   color: var(--main-bgd-color);
-}
-
-.footer-contacts {
-  padding-bottom: 60px;
 }
 
 .item > .address-link {
@@ -362,7 +369,6 @@ p {
 }
 
 .card {
-  height: 404px;
   outline: solid 1px var(--card-border-color);
   margin-right: 30px;
   margin-bottom: 30px;
@@ -377,6 +383,7 @@ p {
 }
 
 .card-img {
+  display: block;
   margin-bottom: 20px;
 }
 
