Додає псевдоклас :link у навігації

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ img {
   text-decoration: none;
 }
 
+.item > .header-link:link,
 .item > .header-link:visited {
   color: var(--main-font-color);
 }
